<resources>
    /* Notifications */
    <string name="notification_title" translatable="false">Ping Widget</string>
    <string name="notification_text">Ping Widget is active</string>
    <string name="notification_channel_name">Ping notifications</string>
    <string name="notification_channel_description">Notifications that appear when PingWidget is active</string>

    /* Widget */
    <string name="app_name" translatable="false">Ping Widget</string>
    <string name="app_name_short" translatable="false">PW</string>
    <string name="widget_press_start_activate">Click play button to start</string>
    <string name="widget_loading">Loading&#8230;</string>
    <string name="widget_max_min">Max: %1$s - Min: %2$s</string>
    <string name="widget_last">Last: %1$s</string>
    <string name="widget_uptime">Uptime %1$d%%</string>
    <string name="widget_avg">Avg: %1$s</string>
    <string name="widget_max_min_err">Max: ERR - Min: ERR</string>
    <string name="widget_last_err">Last: ERR</string>
    <string name="widget_uptime_err">Uptime 0%</string>
    <string name="widget_avg_err">Avg: ERR</string>
    <string name="infinite">Infinite</string>


    /* Activity Home */
    <string name="activity_home_title">PingWidget</string>
    <string name="activity_home_subtitle">How to use this widget?</string>
    <string name="activity_home_step_1_num" translatable="false">1</string>
    <string name="activity_home_step_2_num" translatable="false">2</string>
    <string name="activity_home_step_3_num" translatable="false">3</string>
    <string name="activity_home_step_1">Long press your home screen</string>
    <string name="activity_home_step_2">Tap on \'Widgets\'</string>
    <string name="activity_home_step_3">Drag a PingWidget to your home screen</string>
    <string name="activity_home_continue" translatable="false">Ok!</string>

    <string name="activity_home_version" translatable="false">v%1$s</string>
    <string name="activity_home_author" translatable="false">Alejandro Bicelis %1$d</string>

    <string name="activity_home_market_link">Rate app</string>
    <string name="activity_home_github_link">View GitHub Project</string>
    <string name="activity_home_website_link" translatable="false">www.alejandrobicelis.com.ve</string>

    /* Widget Configure preference activity/fragment */
    <string name="fragment_widget_configure_name">Configure Ping Widget</string>
    <string name="activity_widget_configure_menu_done">DONE</string>


    <string name="fragment_widget_configure_address_key" translatable="false">widget_configure_address</string>
    <string name="fragment_widget_configure_address_title">IP Address or hostname</string>
    <string name="fragment_widget_configure_address_summary" translatable="false">www.google.com</string>

    <string name="fragment_widget_configure_interval_key" translatable="false">widget_configure_interval</string>
    <string name="fragment_widget_configure_interval_title">Ping Frequency</string>

    <string name="fragment_widget_configure_max_pings_key" translatable="false">widget_configure_max_pings</string>
    <string name="fragment_widget_configure_max_pings_title">Max pings to execute (Per start)</string>

    <string name="fragment_widget_configure_max_pings_on_chart_key" translatable="false">widget_configure_max_pings_on_chart</string>
    <string name="fragment_widget_configure_max_pings_on_chart_title">Max pings to draw on chart</string>

    <string name="fragment_widget_show_chart_lines_key" translatable="false">widget_show_chart_lines</string>
    <string name="fragment_widget_show_chart_lines_title">Draw average on chart</string>

    <string name="fragment_widget_dark_theme_key" translatable="false">widget_dark_theme</string>
    <string name="fragment_widget_dark_theme_title">Dark background</string>

    <string name="fragment_widget_configure_theme_key" translatable="false">widget_configure_theme</string>
    <string name="fragment_widget_configure_theme_title">Theme</string>



    <string name="fragment_widget_configure_about_key" translatable="false">widget_configure_about</string>
    <string name="fragment_widget_configure_about_summary">Version %1$s</string>

    <string name="fragment_widget_configure_rate_key" translatable="false">widget_configure_rate</string>
    <string name="fragment_widget_configure_rate_title">Rate Ping Widget</string>
    <string name="fragment_widget_configure_rate_summary">Like this app? A 5-star rating is gladly appreciated</string>

    <string name="fragment_widget_configure_contact_key" translatable="false">widget_configure_contact</string>
    <string name="fragment_widget_configure_contact_title">Contact developer</string>
    <string name="fragment_widget_configure_contact_summary">Having trouble using this app? Questions? Email me at alejandro@alejandrobicelis.com.ve</string>



    <string name="fragment_widget_configure_err_address">Please enter a valid Address</string>
    <string name="fragment_widget_configure_err_interval">Please select an interval</string>
    <string name="fragment_widget_configure_err_max_pings">Please select a Max Pings amount</string>
    <string name="fragment_widget_configure_err_max_pings_on_chart">Please select a Max Pings On Chart amount</string>


    <string name="enum_preference_max_ping_format">%1$d pings</string>
    <string name="enum_preference_ping_interval_format_singular">%1$d second</string>
    <string name="enum_preference_ping_interval_format">%1$d seconds</string>


    /* Ping Failure Type */
    <string name="enum_ping_failure_type_could_not_ping" translatable="false">COULD_NOT_PING</string>
    <string name="enum_ping_failure_type_destination_port_unreachable" translatable="false">PORT_UNREACHABLE</string>
    <string name="enum_ping_failure_type_destination_host_unreachable" translatable="false">HOST_UNREACHABLE</string>
    <string name="enum_ping_failure_type_unknown_error" translatable="false">UNKNOWN_ERROR</string>


    /* Widget Themes (Summaries)*/
    <string name="widget_theme_summary_blue_yellow">Blue/Yellow</string>
    <string name="widget_theme_summary_green_green">Green</string>
    <string name="widget_theme_summary_orange_amber">Orange/Amber</string>
    <string name="widget_theme_summary_red_teal">Red/Teal</string>
    <string name="widget_theme_summary_teal_orange">Teal/Orange</string>
    <string name="widget_theme_summary_purple_orange">Purple/Orange</string>

    /* Links */

    <string name="url_market" translatable="false">market://details?id=ve.com.abicelis.pingwidget</string>
    <string name="url_github" translatable="false">github.com/abicelis/</string>
    <string name="url_website" translatable="false">www.alejandrobicelis.com.ve</string>
    <string name="address_email" translatable="false">alejandro@alejandrobicelis.com.ve</string>
</resources>
