<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background_bottom_light_tall"
    >

    <RelativeLayout
        android:id="@+id/widget_layout_container_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingRight="7dp"
        android:paddingLeft="12dp"
        android:background="@drawable/widget_background_top_blue_tall">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/widget_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/text_white"
                android:textStyle="bold"
                android:text="@string/app_name"
                />

            <ImageView
                android:id="@+id/widget_ping_sent_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:tint="@color/ping_icon_sent"
                android:src="@drawable/icon_ping_sent"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/widget_ping_ok_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:tint="@color/ping_icon_ok"
                android:src="@drawable/icon_ping_ok"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/widget_ping_bad_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:tint="@color/ping_icon_bad"
                android:src="@drawable/icon_ping_bad"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@+id/widget_start_pause"
            android:layout_toStartOf="@+id/widget_start_pause"
            >
            <TextView
                android:id="@+id/widget_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/text_white"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="www.google.com"
                />
            <ImageView
                android:id="@+id/widget_reconfigure"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/icon_wrench"
                />

        </LinearLayout>



        <ImageView
            android:id="@+id/widget_start_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:tint="@color/text_white"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/widget_shadow_transition"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:scaleType="fitXY"
        android:alpha="0.4"
        android:layout_below="@+id/widget_layout_container_top"
        android:src="@drawable/shadow_transition"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@id/widget_shadow_transition"
        >

        <ImageView
            android:id="@+id/widget_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:gravity="center_horizontal|center_vertical"
            android:layout_below="@+id/widget_max_min_ping"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/widget_max_min_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/widget_last_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:layout_toRightOf="@+id/widget_max_min_ping"
            android:layout_toEndOf="@+id/widget_max_min_ping"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/widget_uptime_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/widget_avg_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/widget_press_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:text="@string/widget_press_start_activate"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/widget_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:text="@string/widget_loading"/>


    </RelativeLayout>
</RelativeLayout>